[project]
name = "probe-station"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "colour>=0.1.5",
    "matplotlib-label-lines>=0.7.0",
    "matplotlib>=3.9.2",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "scienceplots>=2.1.1",
    "scipy>=1.14.1",
]

[tool.ruff]
exclude = [
   "docs",
]

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff.format]
docstring-code-format = true

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "ruff>=0.7.0",
]
