[project]
name = "probe-station"
dynamic = [
    "version",
]
description = "Package for processing of probe station data."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colour>=0.1.5",
    "matplotlib-label-lines>=0.7.0",
    "matplotlib>=3.9.2",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "pymeasure @ git+https://github.com/pymeasure/pymeasure.git@master",
    "qtpy>=2.4.3",
    "scienceplots>=2.1.1",
    "scipy>=1.14.1",
    "pyqt6>=6.9.1",
]

[project.scripts]
probe-station = "probe_station.measurements.launcher:main"

[project.gui-scripts]
probe-station-gui = "probe_station.measurements.launcher:main"

[project.optional-dependencies]
docs = [
    "docstrfmt>=1.10.0",
    "furo>=2024.8.6",
    "sphinx-autobuild>=2024.10.3",
    "sphinx-autodoc-typehints>=3.1.0",
    "sphinx-codeautolink>=0.17.1",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.6.1",
    "sphinx>=8.2.1",
]
tests = [
    "coverage>=7.6.1",
    "pytest-cov>=5.0.0",
    "pytest>=8.3.5",
]
measurements = [
    "keysight-b1530a @ git+https://github.com/ilev-sergey/keysight-b1530a.git@master",
    "waveform-generator @ git+https://github.com/ilev-sergey/waveform-generator.git@main",
]

[build-system]
requires = [
    "setuptools>=61.0",
    "setuptools-scm",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/probe_station/_version.py"

[tool.pytest.ini_options]
markers = [
    "e2e: end-to-end tests requiring a real B1500 instrument (deselect with '-m \"not e2e\"')",
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
docstring-code-format = true

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ruff>=0.9.3",
]

[tool.uv.sources]
waveform-generator = { path = "../waveform-generator", editable = true }
keysight-b1530a = { path = "../keysight-b1530a", editable = true }
pymeasure = { path = "../pymeasure", editable = true }
